fix the horizontal scrolling
in the container page I used overflow: hidden
to prevent the webpage creating horizontal bar

[Ticket: 13]

--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ font-family: '__Space_Grotesk_587f35';
     background-size: cover;
     background-repeat: no-repeat;
     height: 100vh;
+    overflow: hidden;
   }
   
   .intro-page {
